# stl2gcode

./: .gitignore  CMakeLists.txt  lib.h  main.cpp  main.py
lib/: Fixed.cpp  Fixed.h  Mesh.cpp  Mesh.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  extra.cpp  extra.h  stl2gcode.cpp  stl2gcode.h
stl2gcode/: Segment.cpp  stl2gcode.cpp  stl2gcode.h
